<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainApp"
    android:background="@drawable/main_app_background"
    >

    <TextView
        android:id="@+id/youAreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello, "
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        android:textColor="@color/appTextColor"
        />

    <Button
        android:id="@+id/callSomeOne"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/youAreTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:background="@drawable/my_shape_blue"
        android:onClick="gotoCallSomeOne"
        android:text="@string/btn_call_someone"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/callSomeOne"
        android:layout_marginTop="70dp"
        android:text="@string/btn_send_email"
        android:onClick="gotoSendEmail"
        android:background="@drawable/my_shape_blue"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/sendEmail"
        android:layout_marginTop="70dp"
        android:text="@string/btn_share_our_logo"
        android:onClick="gotoShareAppLogo"
        android:background="@drawable/my_shape_blue"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/shareTheApp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/takePhoto"
        android:layout_marginTop="70dp"
        android:text="@string/btn_share_our_app"
        android:onClick="gotoShareTheApp"
        android:background="@drawable/my_shape_blue"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/aboutMe"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/shareTheApp"
        android:layout_marginTop="70dp"
        android:text="@string/btn_about_me"
        android:onClick="gotoAboutMe"
        android:background="@drawable/my_shape_blue"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/captureTheMoment"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/aboutMe"
        android:layout_marginTop="70dp"
        android:text="@string/btn_capture_the_moment"
        android:onClick="gotoCaptureTheMoment"
        android:background="@drawable/my_shape_blue"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp" />

</RelativeLayout>