<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallSomeOne"
    android:background="@drawable/call_some_one_background"
    >

    <TextView
        android:textColor="@color/white"
        android:id="@+id/call_some_one_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/title_call_some_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/call_some_one_explanation"
        android:layout_width="279dp"
        android:layout_height="80dp"
        android:text="@string/explain_call_some_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_some_one_title"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:textColor="@color/white"
        android:id="@+id/insert_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_number_def"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_some_one_title"
        app:layout_constraintVertical_bias="0.262"></EditText>

    <ImageButton
        android:id="@+id/call_some_one_btn"
        android:layout_width="69dp"
        android:layout_height="65dp"
        android:autoLink="phone"
        android:onClick="onClickCallSomeOne"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toEndOf="@+id/insert_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306"
        app:srcCompat="@drawable/call_some_one_icon"

        />

    <Button
        android:id="@+id/save_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_some_one_explanation"
        app:layout_constraintVertical_bias="0.314"
        android:onClick="onClickSaveContact"
        android:background="@drawable/my_shape_blue"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>